<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/searchTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="buttonClickedSearch"
            app:srcCompat="@drawable/icon_search"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/tagTitleText"
                android:importantForAutofill="no" />

            <ImageView
                android:id="@+id/sendTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:onClick="buttonClicked"
                app:srcCompat="@drawable/icon_send"
                android:contentDescription="@string/todo" />
        </LinearLayout>
        <EditText
            android:id="@+id/tagText"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:contentDescription="@string/cdTagText"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/tagText"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:layout_marginEnd="48dp"
            tools:ignore="ContentDescription" />


    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">



    <Button
        android:id="@+id/textButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/textButton"
        android:text="@string/textButton" />

    <Button
        android:id="@+id/photoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/cdPhotoButton"
        android:text="@string/photoButton" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>