<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainContent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/searchPhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/icon_search"
            android:onClick="takeDownload"/>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText2"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:hint="@string/tagTitlePhoto"
                android:inputType="text"
                android:importantForAutofill="no" />

            <!---   <ImageView
                   android:id="@+id/sendPhotoButton"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_vertical"
                   app:srcCompat="@drawable/icon_send"
                   android:contentDescription="@string/todo" />-->

           </LinearLayout>
       <LinearLayout
           android:id="@+id/linearLayout4"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <ImageView
               android:id="@+id/galleryButton"
               android:layout_width="150dp"
               android:layout_height="match_parent"
               android:layout_gravity="center_horizontal|left"
               android:contentDescription="@string/cdGalleryButton"
               android:onClick="takeGallery"
               app:srcCompat="@drawable/icon_gallery" />

           <ImageView
               android:id="@+id/camButton"
               android:layout_width="150dp"
               android:layout_height="match_parent"
               android:contentDescription="@string/cdCamButton"
               android:onClick="takePhoto"
               app:srcCompat="@drawable/icon_camera" />

       </LinearLayout>

       </LinearLayout>


       <GridView
           android:id="@+id/gridImagesId"
           android:layout_width="0dp"
           android:layout_height="0dp"
           android:fastScrollEnabled="true"
           android:numColumns="2"
           android:scrollbars="vertical"
           app:layout_constraintBottom_toTopOf="@+id/linearLayout"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.384"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
           app:layout_constraintVertical_bias="0.472" />

       <LinearLayout
           android:id="@+id/linearLayout"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="8dp"
           android:layout_marginEnd="8dp"
           android:layout_marginBottom="8dp"
           android:orientation="horizontal"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent">


       <Button
           android:id="@+id/textButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:contentDescription="@string/cdTextButton_1"
           android:text="@string/textButton_1"
           />

       <Button
           android:id="@+id/photoButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:contentDescription="@string/cdPhotoButton_1"
           android:text="@string/photoButton_1" />





       </LinearLayout>
   </androidx.constraintlayout.widget.ConstraintLayout>